hphp/hack/test/typecheck/coeffects/error_messages.php
<?hh

function local()[]: void {
  echo "bad";
}

function caller()[]: void {
         callee();        }
function callee(): void {}
